--- a/000-default.conf
+++ b/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerAdmin admin@pruebas.com
-    DocumentRoot /home/deploy/app
+    DocumentRoot /home/deploy/app/${APP_LOCATION}
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
